--- a/api/package.json
+++ b/api/package.json
@@ -16,7 +16,9 @@
     "supertest-session": "^4.1.0"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "sequelize": "^6.3.5"
