--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "swagger-autogen": "node swagger.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +15,8 @@
     "mocha": "^8.2.1",
     "nodemon": "^2.0.6",
     "supertest": "^6.0.1",
-    "supertest-session": "^4.1.0"
+    "supertest-session": "^4.1.0",
+    "swagger-autogen": "^2.8.1"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.2",
@@ -25,6 +27,7 @@
     "express-session": "^1.17.1",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "swagger-ui-express": "^4.1.6"
   }
 }
